[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
dependencies = ["dera-baba"]

[project]
name = "dera-baba"
version = "1.0"
description = "Python Package for opening work portal from terminal/cmd"
authors = [{ name = "Shubham", email = "shubhampooch@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Sadhguru" }

[project.urls]
Homepage = "https://github.com/shubhampooch/work"
Issues = "https://github.com/shubhampooch/work/issues"


